bad/array_subscript_invalid_subscript_type_array.example_compiler_output
ERROR
[1mbad/array_subscript_invalid_subscript_type_array.lat:4:5: [1;31merror: [0;1marray subscript has to be of type `int`, not `int[]`[m
	arr[arr];
	   [1;32m^[m
